# gnome-panel

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  ChangeLog.pre-git  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  Readme.md  acconfig.h  autogen.sh  configure.ac  configure.in  gnome-panel.doap  gnome-panel.spec.in
applets/: ChangeLog  Makefile.am
applets/clock/: .cvsignore  ChangeLog  ChangeLog.pre-git  GNOME_ClockApplet.panel-applet.in.in  GNOME_ClockApplet.xml  GNOME_ClockApplet_Factory.server.in.in  Makefile.am  calendar-client.c  calendar-client.h  calendar-sources.c  calendar-window.c  calendar-window.h  clock-applet.c  clock-applet.h  clock-common.h  clock-country.c  clock-country.h  clock-face.c  clock-face.h  clock-location-edit.c  clock-location-edit.h  clock-location-edit.ui  clock-location-tile.c  clock-location-tile.h  clock-location.c  clock-location.h  clock-map.c  clock-map.h  clock-marshallers.list  clock-menu.xml  clock-module.c  clock-preferences.c  clock-preferences.h  clock-preferences.ui  clock-sunpos.c  clock-time.c  clock-time.h  clock-utils.c  clock-utils.h  clock-zoneinfo.c  (+41 more)
applets/fish/: .cvsignore  ChangeLog  GNOME_FishApplet.panel-applet.in.in  GNOME_FishApplet.xml  GNOME_FishApplet_Factory.server.in  GNOME_FishApplet_Factory.server.in.in  Makefile.am  egg-screen-help.c  egg-screen-help.h  fish-applet.c  fish-applet.h  fish-menu.ui  fish-menu.xml  fish-module.c  fish.c  fish.glade  fish.gresource.xml  fish.schemas.in  fish.ui  fish1.xpm  fish_applet.desktop  fish_applet.desktop.in  fish_applet.gnorba  fishanim.fish  footguy.fish  org.gnome.panel.FishApplet.panel-applet.in.in  org.gnome.panel.applet.FishAppletFactory.service.in
applets/gen_util/: .cvsignore  ChangeLog  GNOME_ClockApplet.xml  GNOME_GenUtilApplet_Factory.server.in.in  GNOME_MailCheckApplet.xml  GNOME_PagerApplet.xml  GNOME_ShowDesktopApplet.xml  GNOME_TasklistApplet.xml  Makefile.am  clock.c  clock.h  clock.schemas.in  clock_applet.desktop  clock_applet.desktop.in  egg-screen-url.c  email-e.xpm  email.xpm  gconf-extensions.c  gconf-extensions.h  gen_util.gnorba  handlebin.c  handlebin.h  mailcheck.c  mailcheck.h  mailcheck.schemas  mailcheck.schemas.in  mailcheck.soundlist  mailcheck.soundlist.in  mailcheck_applet.desktop  mailcheck_applet.desktop.in  main.c  multihead-hacks.h  pager.c  pager.glade  pager.h  pager.schemas  pager.schemas.in  popcheck.c  popcheck.h  print.xpm  (+14 more)
applets/mailcheck/: .cvsignore  ChangeLog  (+8 more)
data/: Makefile.am  default.layout  gnome-fallback.desktop.in.in  gnome-flashback-compiz.desktop.in.in  gnome-flashback-compiz.session.desktop.in  gnome-flashback.desktop.in  gnome-flashback.session.desktop.in  org.gnome.gnome-panel.applet.clock.gschema.xml  org.gnome.gnome-panel.applet.clock.gschema.xml.in.in  org.gnome.gnome-panel.applet.fish.gschema.xml  org.gnome.gnome-panel.applet.fish.gschema.xml.in.in  org.gnome.gnome-panel.applet.initial-settings.gschema.xml  org.gnome.gnome-panel.applet.window-list.gschema.xml  org.gnome.gnome-panel.applet.window-list.gschema.xml.in.in  org.gnome.gnome-panel.applet.workspace-switcher.gschema.xml  org.gnome.gnome-panel.applet.workspace-switcher.gschema.xml.in.in  org.gnome.gnome-panel.gschema.xml  org.gnome.gnome-panel.gschema.xml.in.in  org.gnome.gnome-panel.launcher.gschema.xml  org.gnome.gnome-panel.launcher.gschema.xml.in.in  org.gnome.gnome-panel.menu-button.gschema.xml  org.gnome.gnome-panel.menu-button.gschema.xml.in.in  org.gnome.gnome-panel.object.gschema.xml  org.gnome.gnome-panel.object.gschema.xml.in.in  org.gnome.gnome-panel.toplevel.gschema.xml  org.gnome.gnome-panel.toplevel.gschema.xml.in.in  panel-applet.xml  panel-default-layout.layout
gnome-panel/: .cvsignore  APPLET_WRITING  AUTHORS  Adwaita.css  ChangeLog  ChangeLog-20010806  GNOME_Panel.server  GNOME_Panel.server.in  GNOME_Panel_Popup.xml  GNOME_Panel_TestApplet.server.in  HighContrast.css  Makefile.am  README.ABOUT_THIS_BRANCH  TODO  TODO.old  aligned-widget.c  aligned-widget.h  applet-init.c  applet-init.h  applet-lib.cc  applet-lib.h  applet-object.c  applet-object.h  applet-private.h  applet-widget.c  applet-widget.h  applet.c  applet.h  applet_cmds.h  applet_files.c  applet_files.h  appletsConf.sh.in  bad-applet.c  bad-applet.desktop  bad-applet.goad  basep-widget.c  basep-widget.h  border-widget.c  border-widget.h  button-widget.c  (+331 more)
icons/: Makefile.am
libgnome-panel/: Makefile.am  gp-action-private.h  gp-action.c  gp-action.h  gp-applet-info-private.h  gp-applet-info.c  gp-applet-info.h  gp-applet-private.h  gp-applet.c  gp-applet.h  gp-enum-types.c.in  gp-enum-types.h.in  gp-image-menu-item.c  gp-image-menu-item.h  gp-initial-setup-dialog-private.h  gp-initial-setup-dialog.c  gp-initial-setup-dialog.h  gp-lockdown.c  gp-lockdown.h  gp-macros.h  gp-main-menu-private.h  gp-main-menu.c  gp-main-menu.h  gp-module-info-private.h  gp-module-info.c  gp-module-info.h  gp-module-private.h  gp-module.c  gp-module.h  gp-utils.c  gp-utils.h
libpanel-applet/: .cvsignore  ChangeLog  GNOME_Panel_TestApplet.panel-applet.in  GNOME_Panel_TestApplet.server.in  Makefile.am  TODO  libpanel-applet-uninstalled.pc.in  libpanel-applet.pc.in  libpanelapplet-2.0-uninstalled.pc.in  libpanelapplet-2.0.pc.in  libpanelapplet-3.0-uninstalled.pc.in  libpanelapplet-3.0.pc.in  libpanelapplet-4.0-uninstalled.pc.in  libpanelapplet-4.0.pc.in  libpanelapplet-uninstalled.pc.in  libpanelapplet.pc.in  org.gnome.panel.TestApplet.panel-applet.in  panel-applet-bindings.c  panel-applet-bindings.h  panel-applet-factory.c  panel-applet-factory.h  panel-applet-factory.xml  panel-applet-gconf.c  panel-applet-gconf.h  panel-applet-marshal.list  panel-applet-private.h  panel-applet-shell.c  panel-applet-shell.h  panel-applet.c  panel-applet.h  panel-plug.c  panel-test-applets.c  panel-test-applets.glade  panel-test-applets.glade2  test-bonobo-applet.c  test-dbus-applet.c  test-dbus-applet.py
libpanel-util/: Makefile.am  panel-error.c  panel-glib.c  panel-glib.h  panel-keyfile.h
trunk/: AUTHORS  ChangeLog  HACKING  MAINTAINERS  Makefile.am  NEWS  autogen.sh
(+1213 files in other folders)
